# LangRepeater

./: .gitignore  LICENSE  README.md  REQUIREMENTS-ko.md  REQUIREMENTS.md  pyproject.toml
.claude/: settings.json
langrepeater/: abbreviations.json  api_main.py  app.py  capital_letters.json  keyboard_handler.py  main.py  split_points.json  ui.py
langrepeater/api/: server.py  state.py
langrepeater/api/routers/: audio.py  files.py  sessions.py  stats.py  subtitles.py
langrepeater/core/: audio_player.py  bookmark_store.py  file_finder.py  models.py  progress_store.py  settings_store.py  srt_parser.py  stats_store.py  url_loader.py
langrepeater/macos_app/: api_client.py  app.py  controller.py  main.py
tests/: test_api.py  test_macos_app.py
