[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langrepeater"
version = "0.5.0"
requires-python = ">=3.11"
dependencies = [
    "pygame>=2.5",
    "python-vlc>=3.0",
    "srt>=3.5",
    "rich>=13.0",
    "pyyaml>=6.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.28",
    "yt-dlp>=2024.1",
    "openai-whisper>=20231117",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[project.scripts]
LangRepeater = "langrepeater.main:main"
LangRepeaterAPI = "langrepeater.api_main:main"
LangRepeaterMac = "langrepeater.macos_app.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["langrepeater*"]
